@@ -34,3 +34,7 @@
 
 [B][COLOR green]v 1.0.10 (Friday, 29 July, 2016)[/COLOR][/B]
 -- [COLOR yellow][B]fixes[/COLOR][/B] fix for search and added channels category.
+
+
+[B][COLOR green]v 1.0.11 (Friday, 29 July, 2016)[/COLOR][/B]
+-- [COLOR yellow][B]fixes[/COLOR][/B] fix for live sports.
